--- a/estilo.css
+++ b/estilo.css
@@ -97,6 +97,16 @@ font-family:'Courier New', Courier, monospace ;
 .taller {
     margin-right: 10px;
     display: flexbox;
-
-
 }
+.colaboraciones{
+    color: azure;
+    width: 1100px;
+    background:rgba(0, 0, 0, .4);
+    margin: 0 auto;
+    margin-top: 4%;
+    padding: 20px;
+    text-align: center;
+    border-radius: 15px;
+    font-family:'Courier New', Courier, monospace ;
+}
+
